# cpp-plugins

./: README.md
app/: CMakeLists.txt
app/inc/: ilogger.h
app/src/: main.cpp
logger/: CMakeLists.txt  logger.cpp  logger.h
